<resources>
    <string name="app_name">SafeBar</string>
    <string name="btn_cuenta_configuracion">Configuración</string>
    <string name="btn_cuenta_aboutus">About Us</string>
    <string name="btn_cuenta_ayuda">Ayuda</string>
    <string name="btn_cuenta_protocolocovid">Protocolo Covid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvFragementAyuda">Para mejorar su experiencia en SafeBar puede contactar con nosotros para resolver todas las dudas que se le planteen, estaremos encantados de solucionarlas</string>
    <string name="tvFragementProtocolo">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="tvFragementDesFoto1">Foto1</string>
    <string name="tvFragementDesFoto2">Foto2</string>
    <string name="tvFragementDesFoto3">Foto3</string>
    <string name="config_frag_tv_nombre">Pablo Sanchez</string>
    <string name="config_frag_tv_email">pablo@gmail.com</string>
    <string name="config_frag_tv_pw">lechuga1234</string>
    <string name="config_frag_tv_direc">Sector Mares 27, Tres Cantos</string>
    <string name="config_frag_btn_edit_perf">Editar cuenta</string>
    <string name="config_frag_btn_log_out">Log Out</string>
    <string name="editperf_frag_tv_nombre">Nombre</string>
    <string name="editperf_frag_tv_email">Email</string>
    <string name="editperf_frag_tv_pw">Contraseña</string>
    <string name="editperf_frag_tv_direc">Dirección</string>
    <string name="editperf_frag_btn_guardar">Guardar</string>
    <string name="ditperf_frag_btn_cancelar">Cancelar</string>
    <string name="perf_rest_frag_tv_nombre">Oven</string>
    <string name="perf_rest_frag_tv_email">oven@gmail.com</string>
    <string name="perf_rest_frag_tv_pw">lechuga1234</string>
    <string name="perf_rest_frag_tv_direc">Calle Falsa 123, Madrid</string>
    <string name="perf_rest_frag_tv_precio">25€</string>
    <string name="perf_rest_frag_tv_aforo">70</string>
    <string name="perf_rest_frag_tv_descrip">Disfruta del ambiente acogedor de nuestros restaurancontem</string>
    <string name="edit_perf_rest_frag_tv_nombre">Nombre</string>
    <string name="edit_perf_rest_frag_tv_email">Email</string>
    <string name="edit_perf_rest_frag_tv_pw">Contraseña</string>
    <string name="edit_perf_rest_frag_tv_direc">Dirección</string>
    <string name="edit_perf_rest_frag_btn_guardar">Guardar</string>
    <string name="edit_perf_rest_frag_tv_descrip">Descripción</string>
    <string name="edit_perf_rest_frag_tv_precio">Precio medio</string>
    <string name="edit_perf_rest_frag_tv_aforo">Aforo</string>
    <string name="restaurante_frag_btn_reservar">Reservar</string>
    <string name="edit_perf_rest_frag_tv_telef">Teléfono</string>
    <string name="selecciona_imagen">Selecciona una imagen</string>
    <string name="perfil_modificado_ok">Tu perfil ha sido modificado con éxito</string>
    <string name="filtros_frag_btn_filtrar">Buscar</string>
    <string name="restaurante_frag_btn_reservaRest">Validar</string>
    <string name="reserva_verificada">QR escaneado correctamente</string>
    <string name="error_lectura_qr">Error al leer el QR</string>
    <string name="title_reservas">Reservas</string>
    <string name="title_qr_usu">Generar QR</string>
    <string name="title_qr_rest">Verificar reserva</string>
    <string name="debes_introducir_nombre">Debes introducir un nombre</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="reserva_realizada">¡Reserva realizada con éxito!</string>
    <string name="faltan_datos">¡Rellena todos los datos!</string>
    <string name="error_carga_datos">Error al cargar los datos</string>
    <string name="aforo_completo">Aforo completo</string>
    <string name="error_llamada">No se ha podido realizar la acción</string>
    <string name="error_qr_no_coincide">No se han encontrado coincidencias para el QR</string>
    <string name="reserva_validada_ok">¡Reserva validada con éxito!</string>
    <string name="escanea_qr">Escanea el QR del cliente</string>
    <string name="generar_qr">GENERAR QR</string>
    <string name="escanear_qr">ESCANEAR QR</string>
    <string name="validar">Validar</string>
    <string name="llamar">llamar</string>
    <string name="navegar">Navegar</string>
    <string name="texto_about_us">Somos Alejandro García, Miguel Moneo y Pablo Sánchez, alumnos de Desarrollo de Aplicaciones Multiplataforma.\n\nDurante el proyecto hemos desarrollado un total de 14.000 líneas, implementado alrededor de 7 módulos distintos tanto para ayudarnos con la funcionalidad como adecuar la apariencia de la aplicación. \n\nPuedes encontrarnos en github como \n@alxgarci | @PabloSC900 | @ccapu</string>
    <string name="email">Email</string>
    <string name="qr_code">Código QR</string>
    <string name="user_not_found">El usuario introducido no existe</string>
    <string name="unexpected_error">Ha ocurrido un error inesperado</string>
    <string name="login_restaurante">LOGIN RESTAURANTE</string>
    <string name="login">Login</string>
    <string name="mantenerme_logueado">Mantenerme logueado</string>
    <string name="sin_cuenta_registrate">¿No tienes cuenta? Regístrate</string>
    <string name="login_usuario">LOGIN USUARIO</string>
    <string name="introduce_rest">Introduce un restaurante</string>
</resources>