<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CuentaFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tu cuenta"
        android:gravity="center"
        android:layout_marginTop="22dp"
        android:textStyle="bold"
        style="@style/Text.Titulo"
        android:textSize="32dp"
        android:textColor="@color/orange_dark"/>
    <TextView
        android:id="@+id/tvCuentaEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Text.Subtitulo.RobotoMedium"
        android:text="email@email.com"
        android:textSize="18sp"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:layout_marginTop="8dp"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCuentaConfiguracion"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_cuenta_configuracion"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_gravity="center"
        android:textSize="22sp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCuentaAboutUs"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:text="@string/btn_cuenta_aboutus"
        android:textSize="22sp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCuentaAyuda"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:text="@string/btn_cuenta_ayuda"
        android:textSize="22sp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCuentaProtocoloCovid"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:text="@string/btn_cuenta_protocolocovid"
        android:textSize="22sp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_gravity="center"/>

</LinearLayout>