<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AyudaFragment"
    android:padding="6dp"
    android:gravity="center_vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/tvFragementAyuda"
        android:fontFamily="@font/oswald_light"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:padding="6dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEmailAyudaFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:drawableEnd="@drawable/ic_email_24"
            android:backgroundTint="@color/yellow"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLlamarAyudaFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/llamar"
            android:drawableEnd="@drawable/ic_telefono"
            android:backgroundTint="@color/green_dark"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            />
    </LinearLayout>



</LinearLayout>