<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.EditarPerfilFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgEditPerfFrag"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_email_cuenta"/>

        <ImageButton
            android:id="@+id/imbEditPerfFrag"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@color/white_light_alpha"
            android:src="@drawable/ic_editar"
            android:layout_marginLeft="-140dp"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/editperf_frag_tv_nombre"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"

        style="@style/TextInput.Outlined.WithBackground">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditPerfFragNom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/editperf_frag_tv_email"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        style="@style/TextInput.Outlined.WithBackground">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditPerfFragEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/editperf_frag_tv_pw"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        style="@style/TextInput.Outlined.WithBackground">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditPerfFragPW"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/editperf_frag_tv_direc"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        style="@style/TextInput.Outlined.WithBackground">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditPerfFragDirec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>