<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/ivBackgroundLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_restaurante_crop"
        android:scaleType="centerCrop"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/ivLogoLogin"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_logo"/>

        <LinearLayout
            android:id="@+id/llSwitch"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivLogoLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLoginRest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogoLogin"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/login_usuario"
                android:textColor="@color/white"
                android:layout_weight="2"
                android:layout_marginTop="6dp"
                style="@style/Text.Titulo"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginRest"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lLoginUsuario"
            android:layout_width="300dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/llSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email_24"
            app:startIconTint="@color/white_alpha"
            style="@style/TextInput.LogIn">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"/>


        </com.google.android.material.textfield.TextInputLayout>

<!--        TODO: STARTICONDRAWABLE BIEN O MAL??-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lLoginPassword"
            android:layout_width="300dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/lLoginUsuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:hint="@string/edit_perf_rest_frag_tv_pw"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:startIconDrawable="@drawable/ic_password_24"
            app:startIconTint="@color/white_alpha"
            style="@style/TextInput.LogIn">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:textColorHint="@color/white"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lLoginPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            style="@style/Button.Material.BaseLogin"/>

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chLogin"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:checked="true"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/mantenerme_logueado"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textStyle="italic" />
<!--            <TextView-->
<!--                android:id="@+id/tvOlvidasteContrasenaLogin"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="¿Olvidaste la contraseña?"-->
<!--                android:textColor="@color/white"-->
<!--                android:gravity="end"-->
<!--                android:layout_marginTop="-8dp"-->
<!--                android:textSize="14sp"-->
<!--                android:onClick="olvidasteContrasena"-->
<!--                />-->
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/llLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:text="@string/sin_cuenta_registrate"
            style="@style/Text.Subtitulo.RobotoMedium.Italic"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:onClick="goSignUp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>