<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ConfiguracionFragment">

    <ImageView
        android:id="@+id/imgConfigFrag"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_persona"
            android:layout_marginEnd="12dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_perf_rest_frag_tv_nombre"
                android:textSize="18sp"
                android:textColor="@color/green_light"
                style="@style/Text.Titulo"/>

            <TextView
                android:id="@+id/tvNombreConfigFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green_dark"
                style="@style/Text.Subtitulo.RobotoMedium"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_email"
            android:layout_marginEnd="12dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editperf_frag_tv_email"
                android:textSize="18sp"
                android:textColor="@color/green_light"
                style="@style/Text.Titulo"/>

            <TextView
                android:id="@+id/tvEmailConfigFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green_dark"
                style="@style/Text.Subtitulo.RobotoMedium"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_localizacion"
            android:layout_marginEnd="12dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editperf_frag_tv_direc"
                android:textSize="18sp"
                android:textColor="@color/green_light"
                style="@style/Text.Titulo"/>

            <TextView
                android:id="@+id/tvDirecConfigFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green_dark"
                style="@style/Text.Subtitulo.RobotoMedium"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogOutConfigFrag"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_gravity="center"
        android:text="@string/config_frag_btn_log_out"
        android:textColor="@color/orange_dark"
        android:textSize="18sp"
        android:drawableEnd="@drawable/ic_logout"
        android:drawableTint="@color/orange_dark"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>






</LinearLayout>